testsuite/tests/saks/should_fail/saks_fail008.stderr

saks_fail008.hs:9:1: error:
    Not a function kind: *
    but extra binders found: x1 (x2 :: Type -> Type)
